<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multi_uav_sim</name>
  <version>1.0.0</version>
  <description>Multi-UAV Gazebo simulation package for path planning verification</description>
  <maintainer email="tecimuav2008@todo.todo">tecimuav2008</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
